--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "depop-project2",
   "version": "1.0.0",
-  "description": "",
+  "description": "## Description",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -26,5 +26,6 @@
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.3.1"
-  }
+  },
+  "keywords": []
 }
