--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express": "^4.18.0",
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
-    "mongoose": "^6.3.1"
+    "mongoose": "^6.3.1",
+    "override": "^0.0.1"
   },
   "keywords": []
 }
